--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
           <h5 class="footer__column-heading">О Практикуме</h5>
           <nav>
             <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-links">Главная</a></li>
-              <li><a href="#" class="footer__column-links">Концепция</a></li>
-              <li><a href="#" class="footer__column-links">Наставники</a></li>
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
             </ul>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <nav>
-            <ul class="footer__column-link">
+            <ul class="footer__column-links">
               <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="icon" class="footer__social-icon">Facebook</a></li>
               <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="icon" class="footer__social-icon">ВКонтакте</a></li>
               <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="icon" class="footer__social-icon">Instafram</a></li>
