--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <h5 class="footer__column-heading">Соцсети</h5>
           <nav>
             <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="icon" class="footer__social-icon">Facebook</a></li>
-              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="icon" class="footer__social-icon">ВКонтакте</a></li>
-              <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="icon" class="footer__social-icon">Instafram</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="иконка" class="footer__social-icon">Facebook</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка" class="footer__social-icon">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="иконка" class="footer__social-icon">Instafram</a></li>
             </ul>
           </nav>
         </div>
