--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="header__subtitle">Какие современные и эффективные подходы к
       обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик, который опять принёс домой двойку.">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section class="description">
@@ -34,6 +34,69 @@
               Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
       </div>
+    </section>
+
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <div class="cards">
+        <div class="cards__item">
+          <img src="./images/cards-attention.png" alt="Книга, в которой опубликовано 101 эссе, которые изменят Ваше мышление." class="cards__image">
+          <h4 class="cards__title">Два вида внимания</h4>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/cards-recall.png" alt="Скульптура мальчика в задумчивости." class="cards__image">
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/cards-interliving.png" alt="Всемирный торговый центр в Нью-Йорке" class="cards__image">
+          <h4 class="cards__title">Интерливинг</h4>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/cards-question.png" alt="Белое помещение с множеством окошков, именно так выглядит городская бибоиотека в Штутгарде" class="cards__image">
+          <h4 class="cards__title">Вопросы</h4>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/cards-competence.png" alt="Рука, которая держит стопку книг" class="cards__image">
+          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </div>
+        <div class="cards__item"></div>
+      </div>
+    </section>
+
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <div class="video__iframes">
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" allowfullscreen>Здесь должно было быть выступление Джоша Кауфмана с TED конференции, но Ваш браузер его не поддерживает.</iframe>
+<iframe class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen>Здесь Тим Урбан должен был рассказть Вам, что происходит в голове у закоренелого прокрастинатора, но Ваш браузер не поддерживает фреймы.</iframe>
+      </div>
+    </section>
+
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
+            Она считала себя законченным гуманитарием, причём далеко не самым умным.
+            В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+            что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+            И тогда Барбара придумала свой подход к точным наукам.
+            Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
+            чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+      <a href="#" class="feynman__link">Подробнее →</a>
     </section>
 
     <section class="digits">
@@ -77,10 +140,21 @@
       </ul>
     </section>
 
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-      <a href="#" class="feynman__link">Подробнее →</a>
+    <section class="khan">
+      <div class="khan__container">
+        <h3 class="khan__author">Салман Хан</h3>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+          студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+          кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
+          которые приносят успех в школе, карьере и жизни.</blockquote>
+        <cite class="khan__quote-author">Джордж Лукас</cite>
+        <cite class="khan__quote-author-subline">Кинорежиссер, продюсер</cite>
+        <div class="khan__book-container">
+          <img src="./images/khan-book.jpg" class="khan__book-pic" at="Так выглядит обложка книги Салмана Хана. Это что-то абстрактное, где преобладают синий и оранжевый цвета.">
+          <a href="#" class="khan__buy-link">Купить книгу →</a>
+        </div>
+      </div>
     </section>
 
     <section class="kaufman">
@@ -128,8 +202,28 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-    <img src=".//images/kaufman-triangle.svg" alt="Синий треугольник для красивого фона." class="kaufman__triangle">
+    <img src=".//images/kaufman-triangle.svg" alt="Синий треугольник для красивого фона." class="kaufman__triangle rotation">
     </section>
+
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link">
+          <img src="./images/Arzamas_Academy.png" alt="Академия Арзамас" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/logo-N+1.png" alt="Научные статьи" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/STRELKA.jpeg" alt="Институт Стрелка" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/POLKA.png" alt="Проект полка" class="resources__logo">
+        </a>
+      </div>
+    </section>
+
   </main>
   <footer class="footer">
     <div class="footer__columns">
