--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Научиться учиться</title>
+    <link rel="stylesheet" href="./pages/index.css">
+    <title>Научиться учиться</title>
 </head>
 <body class="page">
   <header class="header">
@@ -65,7 +64,6 @@
           <h4 class="cards__title">Иллюзия компетентности</h4>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </div>
-        <div class="cards__item"></div>
       </div>
     </section>
 
@@ -151,7 +149,7 @@
         <cite class="khan__quote-author">Джордж Лукас</cite>
         <cite class="khan__quote-author-subline">Кинорежиссер, продюсер</cite>
         <div class="khan__book-container">
-          <img src="./images/khan-book.jpg" class="khan__book-pic" at="Так выглядит обложка книги Салмана Хана. Это что-то абстрактное, где преобладают синий и оранжевый цвета.">
+          <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Так выглядит обложка книги Салмана Хана. Это что-то абстрактное, где преобладают синий и оранжевый цвета.">
           <a href="#" class="khan__buy-link">Купить книгу →</a>
         </div>
       </div>
