no iframe comments

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
       <h2 class="section-title">Видео нa TED</h2>
       <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
       <div class="video__iframes">
-        <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" allowfullscreen>Здесь должно было быть выступление Джоша Кауфмана с TED конференции, но Ваш браузер его не поддерживает.</iframe>
-<iframe class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen>Здесь Тим Урбан должен был рассказть Вам, что происходит в голове у закоренелого прокрастинатора, но Ваш браузер не поддерживает фреймы.</iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
+        <!--Я очень хотела добавить текст, который будет показан, если iframe не загрузится, но Валидатор ругается, ссылаясь на то, что между открывающим и закрывающим тегами не может быть вставлен текст.-->
       </div>
     </section>
 
