--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к
-      обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></p>
+      обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик, который опять принёс домой двойку.">
     <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section class="description">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как
@@ -32,44 +32,44 @@
               к обучению, сделать его эффективным и захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
-      </div>
+      </article>
     </section>
 
     <section class="techniques">
       <h2 class="section-title">Техники обучения</h2>
-      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
-      <div class="cards">
-        <div class="cards__item">
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+      <ul class="cards">
+        <li class="cards__item">
           <img src="./images/cards-attention.png" alt="Книга, в которой опубликовано 101 эссе, которые изменят Ваше мышление." class="cards__image">
           <h4 class="cards__title">Два вида внимания</h4>
           <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-        </div>
-        <div class="cards__item">
+        </li>
+        <li class="cards__item">
           <img src="./images/cards-recall.png" alt="Скульптура мальчика в задумчивости." class="cards__image">
           <h4 class="cards__title">Recall</h4>
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-        </div>
-        <div class="cards__item">
+        </li>
+        <li class="cards__item">
           <img src="./images/cards-interliving.png" alt="Всемирный торговый центр в Нью-Йорке" class="cards__image">
           <h4 class="cards__title">Интерливинг</h4>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-        </div>
-        <div class="cards__item">
+        </li>
+        <li class="cards__item">
           <img src="./images/cards-question.png" alt="Белое помещение с множеством окошков, именно так выглядит городская бибоиотека в Штутгарде" class="cards__image">
           <h4 class="cards__title">Вопросы</h4>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-        </div>
-        <div class="cards__item">
+        </li>
+        <li class="cards__item">
           <img src="./images/cards-competence.png" alt="Рука, которая держит стопку книг" class="cards__image">
           <h4 class="cards__title">Иллюзия компетентности</h4>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
 
     <section class="video">
       <h2 class="section-title">Видео нa TED</h2>
-      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
         <iframe class="video__iframe" src="https://www.youtube.com/embed/J_89IMS5gJQ" allowfullscreen></iframe>
         <iframe class="video__iframe" src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
@@ -78,7 +78,7 @@
     </section>
 
     <section class="oakley">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">История Барбары Оакли.</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
@@ -89,18 +89,18 @@
             Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
             чем у тех, кому всё ясно с первого взгляда.</p>
         </div>
-      </div>
+      </article>
     </section>
 
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-      <a href="#" class="feynman__link">Подробнее →</a>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a href="#" class="feynman__link">Подробнее &rarr;</a>
     </section>
 
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
-      <h3 class="section-subtitle">Про учёбу и мозг</h3>
+      <p class="section-subtitle">Про учёбу и мозг</p>
       <ul class="table">
         <li class="table__cell">
           <h4 class="table__heading">86 миллиардов</h4>
@@ -141,24 +141,24 @@
 
     <section class="khan">
       <div class="khan__container">
-        <h3 class="khan__author">Салман Хан</h3>
+        <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
         <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
           студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
           кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
           которые приносят успех в школе, карьере и жизни.</blockquote>
-        <cite class="khan__quote-author">Джордж Лукас</cite>
-        <cite class="khan__quote-author-subline">Кинорежиссер, продюсер</cite>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Так выглядит обложка книги Салмана Хана. Это что-то абстрактное, где преобладают синий и оранжевый цвета.">
-          <a href="#" class="khan__buy-link">Купить книгу →</a>
+          <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
         </div>
       </div>
     </section>
 
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark"> Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+      <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
       <ul class="table table_theme_dark">
         <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -201,26 +201,34 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-    <img src=".//images/kaufman-triangle.svg" alt="Синий треугольник для красивого фона." class="kaufman__triangle rotation">
+      <div class="kaufman__triangle rotation"></div>
     </section>
 
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
-      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-      <div class="resources__logo-zone">
-        <a href="#" class="resources__link">
-          <img src="./images/Arzamas_Academy.png" alt="Академия Арзамас" class="resources__logo">
-        </a>
-        <a href="#" class="resources__link">
-          <img src="./images/logo-N+1.png" alt="Научные статьи" class="resources__logo">
-        </a>
-        <a href="#" class="resources__link">
-          <img src="./images/STRELKA.jpeg" alt="Институт Стрелка" class="resources__logo">
-        </a>
-        <a href="#" class="resources__link">
-          <img src="./images/POLKA.png" alt="Проект полка" class="resources__logo">
-        </a>
-      </div>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <ul class="resources__logo-zone">
+        <li class="resources__link">
+          <a href="#">
+            <img src="./images/Arzamas_Academy.png" alt="Академия Арзамас" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#">
+            <img src="./images/logo-N+1.png" alt="Научные статьи" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#">
+            <img src="./images/STRELKA.jpeg" alt="Институт Стрелка" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#" class="resources__link">
+            <img src="./images/POLKA.png" alt="Проект полка" class="resources__logo">
+          </a>
+        </li>
+      </ul>
     </section>
 
   </main>
